error.txt
    Checking pdfverifier-fe v0.1.0 (C:\Project\PdfVerifier-FE)
warning: unused import: `crate::ber_util`
 --> src\hashing.rs:6:5
  |
6 | use crate::ber_util;
  |     ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
  --> src\parser.rs:78:33
   |
78 | ...                   sub_filter,
   |                       ^^^^^^^^^^ expected `Option<String>`, found `Result<String, Error>`
   |
   = note: expected enum `std::option::Option<std::string::String>`
              found enum `Result<std::string::String, lopdf::Error>`

warning: value assigned to `cms_der_buffer` is never read
  --> src\hashing.rs:38:30
   |
38 |     let mut cms_der_buffer = Vec::new();
   |                              ^^^^^^^^^^
   |
   = help: maybe it is overwritten before being read?
   = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

warning: value assigned to `remaining` is never read
  --> src\ber_util.rs:23:17
   |
23 |                 remaining = &remaining[2..];
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: maybe it is overwritten before being read?

For more information about this error, try `rustc --explain E0308`.
warning: `pdfverifier-fe` (lib) generated 3 warnings
error: could not compile `pdfverifier-fe` (lib) due to 1 previous error; 3 warnings emitted
